# taxlens

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
desktop/: README.md  main.js  package.json  preload.js
desktop/scripts/: build-backend.ps1  build_backend.py
docs/: mockups.html  signing.md
docs/importer_samples/: freetaxusa_2023.txt  freetaxusa_realistic_2023.txt  hrblock_2023.txt  turbotax_2023.txt
scripts/: capture_mockups.py
src/taxlens/: __init__.py  __main__.py  advisor.py  advisor_multi.py  api.py  brackets.py  cli.py  db.py  depreciation.py  engine.py  models.py  rules.py  secure_db.py  service.py  simulators.py
src/taxlens/demo/: __init__.py  casey_2023.yaml  casey_2024.yaml  martinez_family_2024.yaml
src/taxlens/importers/: __init__.py  acroform.py  broker_csv.py  manual.py  pdf.py  txf.py
src/taxlens/web/: app.js  index.html
tax_rules/federal/: 2015.yaml  2016.yaml  2018.yaml  2021.yaml  2023.yaml  2024.yaml
tax_rules/locality/md_anne_arundel/: 2024.yaml
tax_rules/locality/md_baltimore_city/: 2024.yaml
tax_rules/locality/md_baltimore_county/: 2024.yaml
tax_rules/locality/md_pg/: 2024.yaml
tax_rules/locality/yonkers/: 2023.yaml
tax_rules/state/ak/: 2024.yaml
tax_rules/state/az/: 2024.yaml
tax_rules/state/ca/: 2023.yaml  2024.yaml
tax_rules/state/fl/: 2024.yaml
tax_rules/state/ga/: 2023.yaml
tax_rules/state/ma/: 2023.yaml  2024.yaml
tax_rules/state/nj/: 2023.yaml
tax_rules/state/or/: 2024.yaml
tax_rules/state/tx/: 2024.yaml
tests/: conftest.py  realistic_1040.py  synthetic_pdf.py  test_advisor.py  test_amt_schd_state.py  test_api.py  test_brackets.py  test_demo.py  test_engine.py  test_federal_depth_v031.py  test_form_5329.py  test_ftc_904.py  test_income_adjustments.py  test_ira_basis.py  test_ira_deduction.py  test_no_external_urls.py  test_pal_469.py  test_pdf_golden.py  test_pdf_importer.py  test_phase2_credits.py  test_properties.py  test_retirement_income.py  test_sch_e_k1_qbi.py  test_secure_db.py  test_service.py  test_simulators_and_wa.py  test_states_and_csv.py  test_third_party_pdfs.py  test_txf_importer.py  test_v05_features.py  test_v06_features.py  test_v07_carryforwards.py  test_v09_depreciation.py  test_v10_education_credits.py  test_v10_eitc.py  test_v11_credits.py  test_v12_states.py  test_v14_historical_years.py  test_v15_diff_and_pdf.py  test_visualizations.py  (+2 more)
(+47 files in other folders)
