[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxlens"
version = "0.32.0"
description = "Local-first multi-year US tax return analyzer with transparent math."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Richard Pan" }]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11",
  "pypdf>=5.0",
  "typer>=0.12",
  "rich>=13.0",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "reportlab>=4.0",
  "httpx>=0.27",
  "httpx2>=2.0",
  "hypothesis>=6.100",
]
ocr = [
  "pytesseract>=0.3.10",
  "pdf2image>=1.17",
]

[project.scripts]
taxlens = "taxlens.cli:app"

[project.urls]
Homepage = "https://github.com/richardpan/taxlens"
Source   = "https://github.com/richardpan/taxlens"
Issues   = "https://github.com/richardpan/taxlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/taxlens"]

[tool.hatch.build]
include = ["src/taxlens/**"]
artifacts = ["src/taxlens/demo/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
